# ccc-findings

./: .gitignore  AGENT.md  BACKLOG.md  IMPLEMENTATION_SUMMARY.md  PRD.md  README.md  improve-full.md  improve.md  improve.prompt  pyproject.toml
archive/: BACKLOG-10.md  BACKLOG-11.md  BACKLOG-12.md  BACKLOG-13.md  BACKLOG-14.md  BACKLOG-15.md  BACKLOG-16.md  BACKLOG-17.md  BACKLOG-18.md  BACKLOG-2.md  BACKLOG-3.md  BACKLOG-4.md  BACKLOG-5.md  BACKLOG-6.md  BACKLOG-7.md  BACKLOG-8.md  BACKLOG-9.md  BACKLOG-PRIORITY.md
docs/: ADR.md  PRD.md  REST_DETECTION.md  SPEC-FONC.md  SPEC-TECH.md
eval/: queries.yml  run_eval.py
reports/: README.md  booking-microservices-java-spring-boot.md  ftgo-application-audit.md  ftgo-application.cccr.drawio  ftgo-application.cccr.endpoints.json  ftgo-application.cccr.graph.json  ftgo-application.cccr.microservices.json  ftgo-application.direct.drawio  ftgo-application.md  fully-completed-microservices-Java-Springboot.md  kafka-microservices.md  microservices-demo.md  microservices-kafka-mq.md  sample-spring-kafka-microservices.md  spring-boot-project-example.md  spring-petclinic-microservices.md  spring-petclinic-rest.md
scripts/: gen_kafka_mq_diagrams.py  generate_example_reports.py
tests/: conftest.py  test_ccc_bridge.py  test_cli.py  test_config.py  test_configuration.py  test_dependency_analysis.py  test_doctor_audit.py  test_e2e.py  test_embedder.py  test_flow.py  test_gradle.py  test_graph.py  test_indexer.py  test_k12_graph_workspace_e2e.py  test_k5_flow_e2e.py  test_k7_federation_e2e.py  test_kafka_endpoints.py  test_kafka_security_rules.py  test_liveness_rules.py  test_m3_module_graph_e2e.py  test_maven.py  test_mcp_server.py  test_models.py  test_modules.py  test_relations.py  (+8 more)
(+161 files in other folders)
