[project]
name = "ccc-findings"
version = "0.1.0"
description = "Index Semgrep interrogeable par LLM, combiné à cocoindex-code"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "sentence-transformers>=3.0",
    "mcp>=1.0",
    "sqlite-vec>=0.1.9",
]

[project.scripts]
cccf = "cccf.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cccf"]

[tool.pytest.ini_options]
addopts = "-m 'not slow'"
markers = [
    "integration: tests d'intégration exécutant réellement Semgrep",
    "slow: tests lents (téléchargement de modèle, etc.)",
]
