[project]
name = "ccc-radar"
version = "0.1.0"
description = "Indexe findings, code et signaux d'architecture interrogeables par agent"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "sentence-transformers>=3.0",
    "mcp>=1.0",
    "sqlite-vec>=0.1.9",
    "tree-sitter>=0.24,<0.25",
    "tree-sitter-java>=0.23",
]

[project.scripts]
cccr = "ccc_radar.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ccc_radar"]

[tool.pytest.ini_options]
addopts = "-m 'not slow'"
markers = [
    "integration: tests d'intégration exécutant réellement Semgrep",
    "slow: tests lents (téléchargement de modèle, etc.)",
]
